--- a/app.css
+++ b/app.css
@@ -6,14 +6,6 @@ html, body {
 }
 
 body {
-	position: relative;
 	background: rgb(64, 64, 64);
-}
-
-.container {
-	position: relative;
-	top: 50%;
-	margin: -250px auto 0 auto;
-	width: 500px;
-	height: 500px;
+	overflow: hidden;
 }
